# Cranium

./: Cargo.toml  MODULES.md  README.md
.github/workflows/: rust.yml
crates/actionset_loader/: Cargo.toml
crates/actionset_loader/src/: loader.rs
crates/bevy_plugin/: Cargo.toml
crates/bevy_plugin/src/: plugin.rs
crates/core/: Cargo.toml
crates/core/src/: action_state.rs  actions.rs  ai.rs  considerations.rs  context_fetchers.rs  curves.rs  decision_loop.rs  errors.rs  events.rs  lib.rs  lods.rs  pawn.rs  smart_object.rs  types.rs
crates/cranium_api/: Cargo.toml
crates/cranium_api/src/: api.rs  channels.rs  heartbeat.rs  lib.rs  main.rs  plugin.rs  spawn.rs  type_registrations.rs
crates/cranium_ffi/: Cargo.toml
crates/cranium_ffi/src/: ffi_trait.rs  host_id.rs  lib.rs  types.rs
crates/test_plugin/: Cargo.toml
crates/test_plugin/src/: helpers.rs  plugin.rs
examples/ai_server/: README.md  ai_server.rs
examples/e2e/: e2e.rs
src/: lib.rs
