[package]
name = "cranium-api"
description = "A crate extending the Cranium AI library with utilities for using Cranium outside of Bevy as an AI Server."
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
keywords = ["ai", "gamedev", "utility-ai", "bevy"]
categories = ["game-development", "no-std"]
repository = "https://github.com/scrdest/Cranium"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bevy = { version = ">=0.17.0, <0.19.0", default-features = false, features = ["bevy_remote"]}
cranium-bevy-plugin = {version = ">=0.1, <=0.3", path = "../bevy_plugin", optional = false}
cranium-core = {version = ">=0.1, <=0.3", path = "../core"}
cranium-ffi = {version = "0.3", path = "../cranium_ffi"}
crossbeam-channel = "0.5.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {version = ">=1.0, <2.0",optional = false}

[dev-dependencies]
bevy = { version = ">=0.17.0, <0.19.0", default-features = false, features = [
  "dynamic_linking", "debug"
]}

[features]
default = ["std", "logging", "debug"]

std = ["bevy/std"]

debug = ["bevy/debug"]

nostd_support = []

web = []

logging = ["bevy/bevy_log"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
