[package]
name = "cranium-ffi"
description = "A crate providing FFI types for the Cranium AI library. Mainly intended as a companion to cranium-api."
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
keywords = ["ai", "gamedev", "utility-ai", "bevy"]
categories = ["game-development", "no-std"]
repository = "https://github.com/scrdest/Cranium"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bevy = { version = ">=0.17.0, <0.19.0", default-features = false}
cranium-core = {version = ">=0.1, <=0.3", path = "../core"}
cranium-bevy-plugin = {version = ">=0.1, <=0.3", path = "../bevy_plugin", optional = false}

[dev-dependencies]
bevy = { version = ">=0.17.0, <0.19.0", default-features = false, features = [
  "dynamic_linking", "debug"
]}

[features]
default = ["std", "logging", "debug"]

std = ["bevy/std"]

debug = ["bevy/debug"]

nostd_support = []

web = []

logging = ["bevy/bevy_log"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
