[package]
name = "cranium-ffi"
description = "A crate providing FFI types for the Cranium AI library. Mainly intended as a companion to cranium-api."
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
keywords = ["ai", "gamedev", "utility-ai", "bevy"]
categories = ["game-development", "no-std"]
repository = "https://github.com/scrdest/Cranium"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bevy_ecs = { version = ">=0.19.0, <0.20.0", default-features = false}
cranium-core = {version = ">=0.1, <=0.3", path = "../core"}
cranium-bevy-plugin = {version = ">=0.1, <=0.3", path = "../bevy_plugin", optional = false}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {version = ">=1.0, <2.0",optional = false}
# safer-ffi = {version = "0.1.13",optional = false, default-features = false, features = ["alloc", "serde"]}
# tinyvec = {version = ">=1.12.0, <2.0",optional = false, features = ["alloc"]}

[dev-dependencies]

[features]
default = ["std", "logging", "debug"]

std = ["cranium-core/std"]

debug = ["cranium-core/debug"]

nostd_support = []

web = []

logging = ["cranium-core/logging"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
