[package]
name = "cranium-test-plugin"
description = "A crate extending the Cranium AI library with a Plugin for quickly setting up tests. Intended for first-party use."
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
keywords = ["ai", "gamedev", "utility-ai", "bevy"]
categories = ["game-development", "no-std"]
repository = "https://github.com/scrdest/Cranium"

[dependencies]
bevy_ecs = { version = ">=0.19.0, <0.20.0", default-features = false}
cranium-core = {version = ">=0.1, <=0.3", path = "../core"}

[dev-dependencies]

[features]
default = ["logging"]

logging = ["cranium-core/logging"]

std = ["cranium-core/std"]
nostd_support = ["cranium-core/nostd_support"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
